# python-template

./: .envrc  .gitignore  LICENSE  devenv.nix  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  update-devenv.yml  update-flake.yml  update.yml
3.8/: requirements_dev.txt
