[build-system]
requires = ["setuptools>=45", "wheel"]

[project]
name = "template"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Peacock", email = "me@p3ac0ck.net"}]
urls = {repository = "https://github.com/peacock0803sz/python-template"}

dynamic = ["version"]
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "mypy"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
ignore_missing_imports = true
