[project]
name = "template"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Peacock", email = "me@p3ac0ck.net"}]
urls = {repository = "https://github.com/peacock0803sz/python-template"}
version = "0.0.0"
requires-python = ">=3.13"

dependencies = []

[project.optional-dependencies]
test = ["pytest"]
dev = ["mypy", "ruff"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true
